--- a/style.scss
+++ b/style.scss
@@ -67,6 +67,24 @@ ul {
   }
 }
 
+.input {
+  border: 1px solid $border-color;
+  border-radius: $border-radius;
+}
+
+.input-group {
+  .input.input--has-right {
+    border-bottom-right-radius: 0;
+    border-top-right-radius: 0;
+    border-right: 0;
+  }
+
+  &__right {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+}
+
 .panel {
   background-color: #ffffff;
   border: 1px solid #dddddd;
