--- a/style.scss
+++ b/style.scss
@@ -73,6 +73,21 @@ ul {
   }
 }
 
+.form-group {
+  margin-top: 0.5rem;
+
+  &:first-child {
+    margin-top: 0;
+  }
+
+  label {
+    display: block;
+    font-size: 0.8rem;
+    font-weight: 600;
+    margin-bottom: 0.25rem;
+  }
+}
+
 .input {
   border: 1px solid $border-color;
   border-radius: $border-radius;
