--- a/style.scss
+++ b/style.scss
@@ -114,6 +114,10 @@ ul {
   box-shadow: $box-shadow;
   padding: 0.5rem;
 
+  &:focus {
+    border-color: #006994;
+  }
+
   &--centered {
     text-align: center;
   }
