--- a/style.scss
+++ b/style.scss
@@ -80,6 +80,12 @@ ul {
     margin-top: 0;
   }
 
+  &__error {
+    color: #ff7070;
+    font-size: 12px;
+    padding: 3px;
+  }
+
   label {
     display: block;
     font-size: 0.8rem;
@@ -92,6 +98,10 @@ ul {
   border: 1px solid $border-color;
   border-radius: $border-radius;
   padding: 6px 9px;
+
+  .form-group.form-group--error & {
+    border-color: #ff7070;
+  }
 }
 
 .input-group {
@@ -126,8 +136,32 @@ ul {
     background-image: linear-gradient(to right, #ff7070, #ffffff);
   }
 
+  &--warning {
+    color: #000000;
+    background-color: #ffcc00;
+  }
+
   a {
     color: #000000;
     text-decoration: none;
+  }
+
+  ul & {
+    margin-bottom: 0.5rem;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+}
+
+.container {
+  $gutter-width: 12px;
+  padding: 0 $gutter-width;
+
+  @media screen and (min-width: 800px + $gutter-width * 2) {
+    margin: 0 auto;
+    max-width: 800px;
+    padding: 0;
   }
 }
