--- a/style.scss
+++ b/style.scss
@@ -31,8 +31,14 @@ ul {
   background-color: #ffffff;
   border: 1px solid $border-color;
   border-radius: $border-radius;
+  color: #000000;
+  display: inline-block;
+  font-family: inherit;
+  font-size: 16px;
+  font-weight: 400;
   padding: 4px 12px;
   text-align: center;
+  text-decoration: none;
 
   &:disabled {
     background-color: #b6aea7;
