--- a/style.scss
+++ b/style.scss
@@ -211,6 +211,21 @@ ul {
   }
 }
 
+.tag-list {
+  display: inline-block;
+  padding: 0;
+  margin: 0;
+
+  &__item {
+    display: inline-block;
+    background-color: #e2e2e2;
+    padding: 0.25rem 0.5rem;
+    border-radius: 4px;
+    margin-bottom: 0.5rem;
+    margin-right: 0.5rem;
+  }
+}
+
 .textarea {
   border: 1px solid $border-color;
   border-radius: $border-radius;
