--- a/style.scss
+++ b/style.scss
@@ -236,7 +236,7 @@ ul {
 }
 
 .tag-list {
-  display: inline-block;
+  display: inline-flex;
   padding: 0;
   margin: 0;
 
@@ -247,6 +247,23 @@ ul {
     border-radius: 4px;
     margin-bottom: 0.5rem;
     margin-right: 0.5rem;
+
+    select {
+      background-color: transparent;
+      border: 0;
+    }
+  }
+
+  &__action-button {
+    align-items: center;
+    border: 0;
+    cursor: pointer;
+    display: inline-flex;
+    border-radius: 50%;
+    height: 24px;
+    justify-content: center;
+    margin-left: 6px;
+    width: 24px;
   }
 }
 
