--- a/style.scss
+++ b/style.scss
@@ -33,14 +33,24 @@ ul {
   border: 1px solid $border-color;
   border-radius: $border-radius;
   color: #000000;
-  cursor: pointer;
   display: inline-block;
   font-family: inherit;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
   padding: 4px 12px;
   text-align: center;
   text-decoration: none;
+
+  &--toggle {
+    &[aria-pressed="true"] {
+      background-color: #006994;
+      color: #ffffff;
+
+      &:hover {
+        background-color: #0085bb !important;
+      }
+    }
+  }
 
   &:disabled {
     background-color: #b6aea7;
@@ -54,6 +64,11 @@ ul {
   &:hover:not(:disabled) {
     background-color: #f5f5f5;
     font-weight: 400;
+  }
+
+  &--bare {
+    background-color: transparent;
+    border: 0;
   }
 
   &--icon {
@@ -82,6 +97,8 @@ ul {
 }
 
 .button-group {
+  display: inline-block;
+
   .button:not(:last-child) {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
