Add .margin-bottom-1 class

--- a/style.scss
+++ b/style.scss
@@ -164,6 +164,10 @@ ul {
   }
 }
 
+.margin-bottom-1 {
+  margin-bottom: $base-space * 2 !important;
+}
+
 .margin-left-1 {
   margin-left: $base-space * 2 !important;
 }
