--- a/style.scss
+++ b/style.scss
@@ -32,6 +32,15 @@ ul {
   padding: 0;
 }
 
+.badge {
+  background-color: #cccccc;
+  display: inline-block;
+  padding: 0.10rem 0.4rem;
+  border-radius: 6px;
+  font-size: 0.75rem;
+  font-weight: 600;
+}
+
 .button {
   background-color: #ffffff;
   border: 1px solid $border-color;
