--- a/style.scss
+++ b/style.scss
@@ -241,12 +241,13 @@ ul {
 
 .container {
   $gutter-width: 12px;
-  padding: 0 $gutter-width;
+  margin: 0;
+  padding: 0;
 
   @media screen and (min-width: 800px + $gutter-width * 2) {
     margin: 0 auto;
     max-width: 800px;
-    padding: 0;
+    padding: 0 $gutter-width;
   }
 }
 
