--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,5 @@
 @import './button.scss';
+@import './floating-notice.scss';
 @import './form.scss';
 @import './helper.scss';
 @import './table.scss';
