Split header and footer into their own files

--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,9 @@
 @import './breadcrumb.scss';
 @import './button.scss';
 @import './floating-notice.scss';
+@import './footer.scss';
 @import './form.scss';
+@import './header.scss';
 @import './helper.scss';
 @import './panel.scss';
 @import './table.scss';
@@ -57,32 +59,8 @@ ul {
   }
 }
 
-.header {
-  background-color: #069;
-  color: #ffffff;
-  padding: 1rem;
-
-  &__inner {
-    align-items: center;
-    display: flex;
-    justify-content: space-between;
-  }
-
-  a {
-    color: #ffffff;
-  }
-}
-
 .italics {
   font-style: italic;
-}
-
-.footer {
-  background-color: #00334d;
-  color: #ffffff;
-  font-size: 0.75rem;
-  padding: 1rem;
-  text-align: center;
 }
 
 .section {
