Add .padding-vertical-2 class

--- a/helper.scss
+++ b/helper.scss
@@ -54,6 +54,11 @@
   padding-top: $base-space * 4 !important;
 }
 
+.padding-vertical-2 {
+  padding-bottom: $base-space * 3 !important;
+  padding-top: $base-space * 3 !important;
+}
+
 .text-align-center {
   text-align: center;
 }
