--- a/variables.scss
+++ b/variables.scss
@@ -2,3 +2,6 @@ $base-space: 0.2rem;
 $border-color: #dddddd;
 $border-radius: 4px;
 $box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+$dark: #000a10;
+$primary: #006699; // sea blue
+$text-on-primary: #ffffff;
