Update footer text color

--- a/footer.scss
+++ b/footer.scss
@@ -1,7 +1,7 @@
 .footer {
   background-color: #00334d;
   border-top: 2px solid #000000; // or #1A224C ?
-  color: #ffffff;
+  color: #e7f7ff;
   font-size: 0.75rem;
   padding: 1rem;
   text-align: center;
