--- a/form.scss
+++ b/form.scss
@@ -21,6 +21,13 @@
   }
 }
 
+.form-label {
+  display: block;
+  font-size: 0.8rem;
+  font-weight: 600;
+  margin-bottom: 0.25rem;
+}
+
 .input {
   border: 1px solid $border-color;
   border-radius: $border-radius;
