--- a/helper.scss
+++ b/helper.scss
@@ -4,6 +4,14 @@
   display: flex !important;
 }
 
+.display-none {
+  display: none;
+}
+
+.justify-content-space-between {
+  justify-content: space-between;
+}
+
 .margin-bottom-0 {
   margin-bottom: 0 !important;
 }
@@ -42,12 +50,32 @@
   margin-top: $base-space * 2 !important;
 }
 
+.margin-top-2 {
+  margin-top: $base-space * 3 !important;
+}
+
 .margin-top-3 {
   margin-top: $base-space * 4 !important;
 }
 
+.margin-zero-auto {
+  margin: 0 auto;
+}
+
 .padding-bottom-3 {
   padding-bottom: $base-space * 4 !important;
+}
+
+.padding-horizontal-2 {
+  padding-left: $base-space * 3 !important;
+  padding-right: $base-space * 3 !important;
+}
+
+.padding-horizontal-md-0 {
+  @media screen and (min-width: 800px) {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+  }
 }
 
 .padding-top-3 {
