--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,7 @@
 @import './grid.scss';
 @import './header.scss';
 @import './helper.scss';
+@import './markdown-region.scss';
 @import './panel.scss';
 @import './table.scss';
 @import './variables.scss';
