--- a/floating-notice.scss
+++ b/floating-notice.scss
@@ -15,6 +15,7 @@
   border-radius: 4px;
   margin: 0.5rem;
   justify-content: center;
+  z-index: 1;
 
   &--danger {
     background-color: $color-danger;
