--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,7 @@
 @import './breadcrumb.scss';
 @import './button.scss';
 @import './container.scss';
+@import './error-dialog.scss';
 @import './floating-notice.scss';
 @import './footer.scss';
 @import './form.scss';
