--- a/style.scss
+++ b/style.scss
@@ -9,6 +9,7 @@
 @import './header.scss';
 @import './helper.scss';
 @import './markdown-region.scss';
+@import './notice.scss';
 @import './panel.scss';
 @import './table.scss';
 @import './variables.scss';
