--- a/helper.scss
+++ b/helper.scss
@@ -4,6 +4,10 @@
   align-self: flex-end;
 }
 
+.border-top-1 {
+  border-top: 1px solid $border-color;
+}
+
 .display-flex {
   display: flex !important;
 }
@@ -80,6 +84,10 @@
     padding-left: 0 !important;
     padding-right: 0 !important;
   }
+}
+
+.padding-top-2 {
+  padding-top: $base-space * 3 !important;
 }
 
 .padding-top-3 {
