--- a/helper.scss
+++ b/helper.scss
@@ -54,6 +54,10 @@
   margin-right: $base-space * 2 !important;
 }
 
+.margin-right-2 {
+  margin-right: $base-space * 3 !important;
+}
+
 .margin-top-1 {
   margin-top: $base-space * 2 !important;
 }
