Add helpers: .margin-bottom-4, .position-absolute, .position-relative

--- a/helper.scss
+++ b/helper.scss
@@ -36,6 +36,10 @@
   margin-bottom: $base-space * 4 !important;
 }
 
+.margin-bottom-4 {
+  margin-bottom: $base-space * 5 !important;
+}
+
 .margin-horizontal-1 {
   margin-left: $base-space * 2 !important;
   margin-right: $base-space * 2 !important;
@@ -101,6 +105,14 @@
 .padding-vertical-2 {
   padding-bottom: $base-space * 3 !important;
   padding-top: $base-space * 3 !important;
+}
+
+.position-absolute {
+  position: absolute;
+}
+
+.position-relative {
+  position: relative;
 }
 
 .text-align-center {
