--- a/header.scss
+++ b/header.scss
@@ -30,6 +30,8 @@
     align-items: center;
     display: flex;
     list-style-type: none;
+    margin: 0;
+    padding: 0
   }
 
   &__navigation-item {
