--- a/error-dialog.scss
+++ b/error-dialog.scss
@@ -4,7 +4,7 @@
   left: 0;
   right: 0;
   background-color: #c10000;
-  padding: 1rem;
+  padding: $base-space * 2;
   color: #ffffff;
   text-align: center;
 
