--- a/footer.scss
+++ b/footer.scss
@@ -2,7 +2,7 @@
   background-color: #00334d;
   border-top: 2px solid #000000; // or #1A224C ?
   color: #e7f7ff;
-  font-size: 0.75rem;
-  padding: 1rem;
+  font-size: 1.2rem;
+  padding: $base-space * 2;
   text-align: center;
 }
