--- a/form.scss
+++ b/form.scss
@@ -1,7 +1,7 @@
 @import './variables.scss';
 
 .form-group {
-  margin-top: 0.5rem;
+  margin-top: $base-space;
 
   &:first-child {
     margin-top: 0;
@@ -9,23 +9,23 @@
 
   &__error {
     color: #ff7070;
-    font-size: 12px;
+    font-size: 1.2rem;
     padding: 3px;
   }
 
   label {
     display: block;
-    font-size: 0.8rem;
+    font-size: 1.2rem;
     font-weight: 600;
-    margin-bottom: 0.25rem;
+    margin-bottom: $base-space / 2;
   }
 }
 
 .form-label {
   display: block;
-  font-size: 0.8rem;
+  font-size: 1.2rem;
   font-weight: 600;
-  margin-bottom: 0.25rem;
+  margin-bottom: $base-space / 2;
 }
 
 .input {
