--- a/header.scss
+++ b/header.scss
@@ -4,7 +4,7 @@
   background-color: $primary;
   border-bottom: 2px solid #000a10;
   color: $text-on-primary;
-  padding: 0.75rem;
+  padding: $base-space * 1.5;
 
   &__inner {
     align-items: center;
