--- a/helper.scss
+++ b/helper.scss
@@ -25,53 +25,53 @@
 }
 
 .margin-bottom-1 {
-  margin-bottom: $base-space * 2 !important;
+  margin-bottom: $space-unit-1 !important;
 }
 
 .margin-bottom-2 {
-  margin-bottom: $base-space * 3 !important;
+  margin-bottom: $space-unit-2 !important;
 }
 
 .margin-bottom-3 {
-  margin-bottom: $base-space * 4 !important;
+  margin-bottom: $space-unit-3 !important;
 }
 
 .margin-bottom-4 {
-  margin-bottom: $base-space * 5 !important;
+  margin-bottom: $space-unit-4 !important;
 }
 
 .margin-horizontal-1 {
-  margin-left: $base-space * 2 !important;
-  margin-right: $base-space * 2 !important;
+  margin-left: $space-unit-1 !important;
+  margin-right: $space-unit-1 !important;
 }
 
 .margin-horizontal-2 {
-  margin-left: $base-space * 3 !important;
-  margin-right: $base-space * 3 !important;
+  margin-left: $space-unit-2 !important;
+  margin-right: $space-unit-2 !important;
 }
 
 .margin-left-1 {
-  margin-left: $base-space * 2 !important;
+  margin-left: $space-unit-1 !important;
 }
 
 .margin-right-1 {
-  margin-right: $base-space * 2 !important;
+  margin-right: $space-unit-1 !important;
 }
 
 .margin-right-2 {
-  margin-right: $base-space * 3 !important;
+  margin-right: $space-unit-2 !important;
 }
 
 .margin-top-1 {
-  margin-top: $base-space * 2 !important;
+  margin-top: $space-unit-1 !important;
 }
 
 .margin-top-2 {
-  margin-top: $base-space * 3 !important;
+  margin-top: $space-unit-2 !important;
 }
 
 .margin-top-3 {
-  margin-top: $base-space * 4 !important;
+  margin-top: $space-unit-3 !important;
 }
 
 .margin-zero-auto {
@@ -79,12 +79,12 @@
 }
 
 .padding-bottom-3 {
-  padding-bottom: $base-space * 4 !important;
+  padding-bottom: $space-unit-3 !important;
 }
 
 .padding-horizontal-2 {
-  padding-left: $base-space * 3 !important;
-  padding-right: $base-space * 3 !important;
+  padding-left: $space-unit-2 !important;
+  padding-right: $space-unit-2 !important;
 }
 
 .padding-horizontal-md-0 {
@@ -95,16 +95,16 @@
 }
 
 .padding-top-2 {
-  padding-top: $base-space * 3 !important;
+  padding-top: $space-unit-2 !important;
 }
 
 .padding-top-3 {
-  padding-top: $base-space * 4 !important;
+  padding-top: $space-unit-3 !important;
 }
 
 .padding-vertical-2 {
-  padding-bottom: $base-space * 3 !important;
-  padding-top: $base-space * 3 !important;
+  padding-bottom: $space-unit-2 !important;
+  padding-top: $space-unit-2 !important;
 }
 
 .position-absolute {
