--- a/markdown-region.scss
+++ b/markdown-region.scss
@@ -15,8 +15,8 @@
   pre {
     overflow: auto;
     background-color: #f4f4f4;
-    padding: 0.7rem;
-    border-radius: 4px;
+    padding: $base-space * 1.5;
+    border-radius: $border-radius;
 
     code {
       background-color: #f4f4f400;
@@ -26,8 +26,8 @@
   }
 
   ul {
-    padding-left: 1rem;
-    margin-bottom: 16px;
+    padding-left: $base-space * 2;
+    margin-bottom: $base-space * 2;
 
     li:last-child {
       margin-bottom: 0;
@@ -36,23 +36,23 @@
 
   code {
     background-color: #f4f4f4;
-    border-radius: 4px;
-    padding: 0.1rem 0.2rem;
+    border-radius: $border-radius;
+    padding: ($base-space / 4) ($base-space / 2);
   }
 
   hr {
     border-color: #cccccc;
     border-style: solid;
     border-width: 0 0 1px 0;
-    margin: 16px 0;
+    margin: ($base-space * 2) 0;
   }
 
   li {
-    margin-bottom: 3px;
+    margin-bottom: $base-space / 2;
   }
 
   p {
-    margin: 0 0 0.5rem;
+    margin: 0 0 $base-space;
 
     &:last-child {
       margin-bottom: 0;
@@ -64,7 +64,7 @@
 
     td, th {
       border: 1px solid #000000;
-      padding: 6px;
+      padding: $base-space;
     }
   }
 }
