--- a/notice.scss
+++ b/notice.scss
@@ -8,7 +8,7 @@
   border-radius: $border-radius;
   display: flex;
   flex-direction: row;
-  padding: 0.5rem;
+  padding: $base-space;
   position: relative;
 
   &--danger {
@@ -25,7 +25,7 @@
     top: 0;
     left: 0;
     right: 0;
-    margin: 0.5rem;
+    margin: $base-space;
     justify-content: center;
     z-index: 1;
   }
