--- a/panel.scss
+++ b/panel.scss
@@ -5,7 +5,7 @@
   border: 1px solid $border-color;
   border-radius: $border-radius;
   box-shadow: $box-shadow;
-  padding: 0.5rem;
+  padding: $base-space;
 
   &:focus {
     border-color: #006994;
@@ -30,7 +30,7 @@
   }
 
   ul & {
-    margin-bottom: 0.5rem;
+    margin-bottom: $base-space;
 
     &:last-child {
       margin-bottom: 0;
