--- a/index.scss
+++ b/index.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 @import './breadcrumb.scss';
 @import './button.scss';
 @import './container.scss';
@@ -46,7 +47,7 @@ a {
 .badge {
   background-color: #cccccc;
   display: inline-block;
-  padding: ($base-space / 4) ($base-space / 2);
+  padding: math.div($base-space, 4) math.div($base-space, 2);
   border-radius: 6px;
   font-size: 1.2rem;
   font-weight: 600;
@@ -80,7 +81,7 @@ a {
   &__item {
     display: inline-block;
     background-color: #e2e2e2;
-    padding: ($base-space / 2) $base-space;
+    padding: math.div($base-space, 2) $base-space;
     border-radius: 4px;
     margin-bottom: $base-space;
     margin-right: $base-space;
