--- a/helper.scss
+++ b/helper.scss
@@ -74,6 +74,11 @@
   margin-top: $space-unit-3 !important;
 }
 
+.margin-vertical-2 {
+  margin-bottom: $space-unit-2 !important;
+  margin-top: $space-unit-2 !important;
+}
+
 .margin-zero-auto {
   margin: 0 auto;
 }
