--- a/markdown-region.scss
+++ b/markdown-region.scss
@@ -38,7 +38,7 @@
   code {
     background-color: #f4f4f4;
     border-radius: $border-radius;
-    padding: math.div($base-space, 4) math.div($base-space, 2);
+    padding: 1.6px 3.2px;
   }
 
   hr {
