--- a/helper.scss
+++ b/helper.scss
@@ -54,6 +54,10 @@
   margin-left: $space-unit-1 !important;
 }
 
+.margin-left-3 {
+  margin-left: $space-unit-3 !important;
+}
+
 .margin-right-1 {
   margin-right: $space-unit-1 !important;
 }
