--- a/button.scss
+++ b/button.scss
@@ -13,6 +13,10 @@
   text-align: center;
   text-decoration: none;
 
+  @at-root a#{&}:hover {
+    text-decoration: none;
+  }
+
   &--toggle {
     &[aria-pressed="true"] {
       background-color: #006994;
