--- a/index.scss
+++ b/index.scss
@@ -13,12 +13,14 @@
 @import './notice.scss';
 @import './panel.scss';
 @import './table.scss';
+@import './typography.scss';
 @import './variables.scss';
 
 html {
   font-family: sans-serif;
   box-sizing: border-box;
   font-size: 62.5%;
+  line-height: 1.4;
 }
 
 *, *:before, *:after {
@@ -28,11 +30,6 @@ html {
 body {
   font-size: 1.6rem;
   margin: 0;
-}
-
-h1, h2, h3 {
-  font-size: 1.6rem;
-  margin: 0 0 $base-space;
 }
 
 a {
