--- a/variables.scss
+++ b/variables.scss
@@ -7,6 +7,13 @@ $space-unit-2: $base-space;
 $space-unit-3: $base-space * 2; // 16px
 $space-unit-4: $base-space * 3; // 24px
 
+/* Typography */
+$font-size-1: 12px;
+$font-size-2: 14px;
+$font-size-3: 16px;
+$font-size-4: 20px;
+$font-size-5: 28px;
+
 $border-color: #dddddd;
 $border-radius: 4px;
 $box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
