--- a/helper.scss
+++ b/helper.scss
@@ -1,5 +1,9 @@
 @import './variables.scss';
 
+.align-self-flex-start {
+  align-self: flex-start;
+}
+
 .align-self-flex-end {
   align-self: flex-end;
 }
