--- a/markdown-region.scss
+++ b/markdown-region.scss
@@ -39,6 +39,7 @@
     background-color: #f4f4f4;
     border-radius: $border-radius;
     padding: 1.6px 3.2px;
+    white-space: pre;
   }
 
   hr {
