--- a/helper.scss
+++ b/helper.scss
@@ -99,6 +99,10 @@
   margin: 0 auto;
 }
 
+.overflow-auto {
+  overflow: auto;
+}
+
 .padding-bottom-3 {
   padding-bottom: $space-unit-3 !important;
 }
