Add class .align-items-flex-start

--- a/helper.scss
+++ b/helper.scss
@@ -1,5 +1,9 @@
 @import './variables.scss';
 
+.align-items-flex-start {
+  align-items: flex-start;
+}
+
 .align-self-flex-start {
   align-self: flex-start;
 }
