Cap the width of the modal so it doesn't overflow off screen and its contents can be scrolled

--- a/modal.scss
+++ b/modal.scss
@@ -16,6 +16,7 @@
     background-color: #ffffff;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
+    max-width: 100%;
     min-width: 256px;
     position: absolute;
     top: 50%;
