--- a/helper.scss
+++ b/helper.scss
@@ -74,6 +74,10 @@
   margin-left: $space-unit-1 !important;
 }
 
+.margin-left-2 {
+  margin-left: $space-unit-2 !important;
+}
+
 .margin-left-3 {
   margin-left: $space-unit-3 !important;
 }
