--- a/helper.scss
+++ b/helper.scss
@@ -1,5 +1,9 @@
 @import './variables.scss';
 
+.align-items-center {
+  align-items: center;
+}
+
 .align-items-flex-start {
   align-items: flex-start;
 }
