--- a/index.scss
+++ b/index.scss
@@ -14,6 +14,7 @@
 @import './table.scss';
 @import './typography.scss';
 @import './variables.scss';
+@import './color.scss';
 
 html {
   font-family: sans-serif;
