--- a/index.scss
+++ b/index.scss
@@ -42,8 +42,9 @@ a {
 }
 
 .badge {
+  align-items: center;
   background-color: #cccccc;
-  display: inline-block;
+  display: inline-flex;
   padding: math.div($base-space, 4) math.div($base-space, 2);
   border-radius: 6px;
   font-size: 1.2rem;
