--- a/helper.scss
+++ b/helper.scss
@@ -8,6 +8,10 @@
   align-items: flex-start;
 }
 
+.align-items-flex-end {
+  align-items: flex-end;
+}
+
 .align-self-flex-start {
   align-self: flex-start;
 }
