--- a/helper.scss
+++ b/helper.scss
@@ -20,6 +20,10 @@
   align-self: flex-end;
 }
 
+.border-bottom-1 {
+  border-bottom: 1px solid $border-color;
+}
+
 .border-top-1 {
   border-top: 1px solid $border-color;
 }
@@ -125,6 +129,10 @@
 
 .overflow-auto {
   overflow: auto;
+}
+
+.padding-bottom-1 {
+  padding-bottom: $space-unit-1;
 }
 
 .padding-bottom-3 {
