--- a/helper.scss
+++ b/helper.scss
@@ -12,6 +12,10 @@
   align-items: flex-end;
 }
 
+.align-items-normal {
+  align-items: normal;
+}
+
 .align-self-flex-start {
   align-self: flex-start;
 }
