--- a/helper.scss
+++ b/helper.scss
@@ -192,6 +192,10 @@
   vertical-align: middle;
 }
 
+.vertical-align-text-bottom {
+  vertical-align: text-bottom;
+}
+
 .width-full {
   width: 100%;
 }
