--- a/variables.scss
+++ b/variables.scss
@@ -17,8 +17,10 @@ $font-size-5: 28px;
 $border-color: #dddddd;
 $border-radius: 4px;
 $box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+$background-color-success: #d4edda;
 $background-color-warning: #fff3cd;
 $color-danger: #993300;
+$color-success: #155724;
 $text-color-warning: #664d03;
 $dark: #000a10;
 $primary: #006699; // sea blue
