--- a/variables.scss
+++ b/variables.scss
@@ -20,7 +20,7 @@ $box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
 $background-color-success: #d4edda;
 $background-color-warning: #fff3cd;
 $color-danger: #993300;
-$color-success: #155724;
+$text-color-success: #155724;
 $text-color-warning: #664d03;
 $dark: #000a10;
 $primary: #006699; // sea blue
