--- a/helper.scss
+++ b/helper.scss
@@ -13,7 +13,7 @@
 }
 
 .align-items-normal {
-  align-items: normal;
+  align-items: normal !important;
 }
 
 .align-self-flex-start {
@@ -177,7 +177,7 @@
 }
 
 .text-align-left {
-  text-align: left;
+  text-align: left !important;
 }
 
 .text-align-center {
