Add .right-0 and .top-0

--- a/helper.scss
+++ b/helper.scss
@@ -180,12 +180,20 @@
   position: relative;
 }
 
+.right-0 {
+  right: 0;
+}
+
 .text-align-left {
   text-align: left !important;
 }
 
 .text-align-center {
   text-align: center;
+}
+
+.top-0 {
+  top: 0;
 }
 
 .underline {
