--- a/typography.scss
+++ b/typography.scss
@@ -30,3 +30,10 @@ h3 {
   font-size: $font-size-2;
 }
 
+.font-size-3 {
+  font-size: $font-size-3;
+}
+
+.font-weight-600 {
+  font-weight: 600;
+}
