--- a/index.scss
+++ b/index.scss
@@ -8,6 +8,7 @@
 @import './grid.scss';
 @import './header.scss';
 @import './helper.scss';
+@import './information.scss';
 @import './markdown-region.scss';
 @import './modal.scss';
 @import './notice.scss';
