--- a/helper.scss
+++ b/helper.scss
@@ -110,6 +110,10 @@
   margin-right: $space-unit-2 !important;
 }
 
+.margin-right-3 {
+  margin-right: $space-unit-3 !important;
+}
+
 .margin-top-1 {
   margin-top: $space-unit-1 !important;
 }
