Added align items baseline class

--- a/helper.scss
+++ b/helper.scss
@@ -1,5 +1,9 @@
 @import './variables.scss';
 
+.align-items-baseline {
+  align-items: baseline;
+}
+
 .align-items-center {
   align-items: center;
 }
